Added Signing to frontend.

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -40,13 +40,13 @@
 
 .container {
   display: grid;
-  grid-template-columns: repeat(6,1fr);
+  grid-template-columns: repeat(7,1fr);
   grid-template-rows: 100px 400px 250px ;
   align-content: start;
   grid-template-areas:
-    " x x title title . connect"
-    " . tab tab tab tab . "
-    " . f_name fields fields buttons . ";
+    " . . . title . . connect"
+    " . tab tab tab tab tab . "
+    " . f_name fields fields buttons . . ";
   place-items: center;
 }
 
