--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -41,13 +41,20 @@
 .container {
   display: grid;
   grid-template-columns: repeat(7,1fr);
-  grid-template-rows: 100px 400px 250px ;
+  grid-template-rows: 1fr 4fr 1fr;
   align-content: start;
   grid-template-areas:
     " . . . title . . connect"
-    " . tab tab tab tab tab . "
-    " . f_name fields fields buttons . . ";
+    " formArea formArea tab tab tab tab tab "
+    " txtX txtX txtX txtX txtX txtX txtX";
   place-items: center;
+  background-image: url("https://unsplash.com/photos/tgQbE_W7Gfs/download?ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjQ3NzI1MTAw&force=true");
+  background-size: "cover"; 
+  width: '100vw';
+  /* height: 100vh;
+  margin-top: -70px;
+  font-size:50px; */
+  background-repeat:repeat; 
 }
 
 .title{
@@ -60,4 +67,25 @@
 
 .tab{
   grid-area: tab;
+}
+
+.formArea{
+  grid-area: formArea;
+  justify-self: start;
+  align-self: flex-start;
+}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.formButton{
+  grid-area: formButton;
+  justify-self: start;
+}
+
+.textExplain{
+  grid-area: txtX;
+  justify-self: start;
 }
