--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -41,11 +41,12 @@
 .container {
   display: grid;
   grid-template-columns: repeat(7,1fr);
-  grid-template-rows: 1fr 4fr 1fr;
+  grid-template-rows: 1fr 3fr 2fr 1fr;
   align-content: start;
   grid-template-areas:
     " . . . title . . connect"
     " formArea formArea tab tab tab tab tab "
+    " exec exec exec exec exec exec exec"
     " txtX txtX txtX txtX txtX txtX txtX";
   place-items: center;
   background-image: url("https://unsplash.com/photos/tgQbE_W7Gfs/download?ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjQ3NzI1MTAw&force=true");
@@ -67,6 +68,7 @@
 
 .tab{
   grid-area: tab;
+  align-self: flex-start;
 }
 
 .formArea{
@@ -87,5 +89,10 @@
 
 .textExplain{
   grid-area: txtX;
+  justify-self: start;
+}
+
+.exec{
+  grid-area: exec;
   justify-self: start;
 }
